--- a/web/css/components/chat.css
+++ b/web/css/components/chat.css
@@ -33,15 +33,15 @@ LIVE CHAT
 }
 
 .conversations .editor {
-  padding: 10px;
-  outline: none;
   margin: 5px;
+  padding: 10px;
   border-radius: 3px;
+  outline: none;
 }
 
 .conversations .editor:focus,
 .conversations .editor:active {
-  border: solid 1px rgba(87, 154, 215, 0.6);
+  border: solid 1px rgba(87, 154, 215, .6);
 }
 
 .conversations .editor a {
@@ -160,7 +160,7 @@ LIVE CHAT
 .aside-chat-right {
   width: 50px;
   overflow: hidden;
-  border-left: solid 1px rgba(136, 136, 136, 0.17);
+  border-left: solid 1px rgba(136, 136, 136, .17);
   border-radius: 3px 3px 0 0;
 }
 
@@ -174,9 +174,9 @@ LIVE CHAT
 }
 
 .conversation-header {
-  background: #eaecf0;
-  border-bottom: solid 1px rgba(136, 136, 136, 0.1);
   height: 51px;
+  border-bottom: solid 1px rgba(136, 136, 136, .1);
+  background: #eaecf0;
 }
 
 .header-control {
@@ -405,13 +405,13 @@ LIVE CHAT
 .multiple {
   display: inline-block;
   margin: 15px;
-  background: #f9fafb;
   overflow: hidden;
   border-radius: 3px;
+  background: #f9fafb;
 }
 
 .multiple.selected {
-  box-shadow: 0 0 20px 0 rgba(74, 83, 100, 0.4);
+  box-shadow: 0 0 20px 0 rgba(74, 83, 100, .4);
 }
 
 .half-width {
@@ -578,9 +578,9 @@ LIVE CHAT
 
 .conversation-footer .panel {
   margin: 0;
-  border: solid 1px rgba(136, 136, 136, 0.32);
-  box-shadow: none;
+  border: solid 1px rgba(136, 136, 136, .32);
   border-radius: 3px;
+  box-shadow: none;
 }
 
 .conversation-footer .alert-writing {
@@ -642,25 +642,25 @@ LIVE CHAT
 }
 
 .conversation-section-item div.msg-visitor {
+  display: inline-block;
+  max-width: 85%;
   min-height: 35px;
+  padding: 7px 8px;
   padding-left: 15px;
   font-size: 12px;
   font-weight: 300;
   text-align: left;
   word-wrap: break-word;
   color: #515151;
-  padding: 7px 8px;
-  background-color: rgba(206, 206, 206, 0.4);
   border-radius: 5px;
-  max-width: 85%;
-  display: inline-block;
+  background-color: rgba(206, 206, 206, .4);
 }
 
 .btn-flag-question {
   position: absolute;
   z-index: 999;
-  left: 15px;
   bottom: -10px;
+  left: 15px;
   display: none;
   float: right;
   padding: 5px 10px;
@@ -712,21 +712,21 @@ LIVE CHAT
 }
 
 .conversation-section-item div.msg-visitor .date {
-  font-weight: 300;
-  color: #A0A0A0;
   font-size: 9px;
+  font-weight: 300;
+  color: #a0a0a0;
 }
 
 .conversation-section-item div.msg-operator {
+  display: inline-block;
+  max-width: 85%;
   min-height: 35px;
+  padding: 7px 8px;
   padding-right: 10px;
   font-size: 12px;
   text-align: left;
-  padding: 7px 8px;
-  background-color: rgba(158, 209, 255, 0.3);
   border-radius: 5px;
-  max-width: 85%;
-  display: inline-block;
+  background-color: rgba(158, 209, 255, .3);
 }
 
 .msg-with-avatar {
@@ -736,9 +736,9 @@ LIVE CHAT
 
 .conversation-section-item span {
   display: block;
-  font-weight: 300;
-  color: #A0A0A0;
   font-size: 9px;
+  font-weight: 300;
+  color: #a0a0a0;
 }
 
 .conversation-section .msg-server {
@@ -749,14 +749,15 @@ LIVE CHAT
 }
 
 .informations-header {
+  cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background: #EAECF0;
-  border-bottom: solid 1px rgba(136, 136, 136, 0.1);
+  border-bottom: solid 1px rgba(136, 136, 136, .1);
+  background: #eaecf0;
+
   -webkit-touch-callout: none;
-  cursor: pointer;
 }
 
 .informations-header h5 {
@@ -780,9 +781,9 @@ LIVE CHAT
 .informations-panel {
   position: relative;
   margin-bottom: 0;
-  box-shadow: none;
-  background: #F3F5F9;
   border-color: transparent;
+  background: #f3f5f9;
+  box-shadow: none;
 }
 
 .informations-panel {
@@ -792,7 +793,7 @@ LIVE CHAT
 }
 
 .informations-panel.scrollable {
-  box-shadow: 0 -15px 15px -12px rgba(69, 69, 69, 0.15) inset;
+  box-shadow: 0 -15px 15px -12px rgba(69, 69, 69, .15) inset;
 }
 
 .search-panel {
@@ -819,27 +820,27 @@ LIVE CHAT
   bottom: 0;
   left: 0;
   margin: 0 auto;
-  background: #F3F5F9;
+  background: #f3f5f9;
 }
 
 .wrapper-search .wrapper-answers {
   height: calc(100% - 60px);
-  overflow: auto;
   padding: 15px;
+  overflow: auto;
   overflow-x: hidden;
 }
 
 .search-answer .msg-wrapper {
   padding: 7px 8px;
   border-radius: 5px;
-  background-color: #D9EAFB;
+  background-color: #d9eafb;
 }
 
-.msg-wrapper.msg-warning{
-  border-left: solid 2px rgba(231, 76, 60, 0.7);
+.msg-wrapper.msg-warning {
   padding: 0 5px 0 10px;
-  background: rgba(255, 255, 255, 0);
+  border-left: solid 2px rgba(231, 76, 60, .7);
   border-radius: 0;
+  background: rgba(255, 255, 255, 0);
 }
 
 .msg-wrapper p {
@@ -855,22 +856,22 @@ LIVE CHAT
 .btn-copy-msg span {
   display: inline-block;
   padding: 5px 8px 5px 5px;
+  font-weight: 600;
   cursor: pointer;
+  color: #757576;
   border: solid 1px rgba(182, 182, 182, 1);
   border-radius: 3px;
-  color: #757576;
-  font-weight: 600;
 }
 
-.lily-loading {
+.search-loading {
   width: 50px;
-  text-align: center;
-  background: #D9EAFB;
   padding: 5px 3px;
+  text-align: center;
   border-radius: 10px;
+  background: #d9eafb;
 }
 
-.lily-loading span {
+.search-loading span {
   display: inline-block;
   width: 8px;
   height: 8px;
@@ -881,11 +882,11 @@ LIVE CHAT
   border-radius: 10px;
   background: rgba(255, 255, 255, 1);
 }
-.lily-loading span:nth-of-type(2) {
+.search-loading span:nth-of-type(2) {
   -webkit-animation-delay: .25s;
      -moz-animation-delay: .25s;
 }
-.lily-loading span:nth-of-type(3) {
+.search-loading span:nth-of-type(3) {
   -webkit-animation-delay: .5s;
      -moz-animation-delay: .5s;
 }
@@ -900,6 +901,23 @@ LIVE CHAT
     width: 8px;
     height: 8px;
     -webkit-transform: translate3d(0, 0, 0);
+    opacity: .7;
+  }
+}
+
+@keyframes loader {
+  0% {
+    width: 7px;
+    height: 7px;
+    -webkit-transform: translate3d(0, -6px, 0);
+            transform: translate3d(0, -6px, 0);
+    opacity: 1;
+  }
+  100% {
+    width: 8px;
+    height: 8px;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
     opacity: .7;
   }
 }
@@ -933,7 +951,7 @@ Typeahead Styles
 
 .tt-suggestion:hover {
   color: #000000;
-  background: rgba(87, 154, 215, 0.3);
+  background: rgba(87, 154, 215, .3);
 }
 
 .tt-suggestion:after {
@@ -960,8 +978,8 @@ Typeahead Styles
 
 .tt-cursor,
 .tt-suggestion:active {
+  color: #ffffff;
   background: #579ad7;
-  color: #fff;
 }
 
 .twitter-typeahead {
@@ -979,8 +997,8 @@ Typeahead Styles
   overflow: auto;
   overflow-x: hidden;
   text-align: left;
+  border-top: solid 1px #d9d9d9;
   background: rgba(249, 250, 252, 1);
-  border-top: solid 1px #D9D9D9;
 }
 
 .action-container {
@@ -1003,7 +1021,7 @@ Typeahead Styles
 }
 
 .search-input:focus {
-  border: solid 1px rgba(87, 154, 215, 0.6);
+  border: solid 1px rgba(87, 154, 215, .6);
 }
 
 .wrapper-input {
@@ -1027,10 +1045,11 @@ Typeahead Styles
   overflow-x: hidden;
   vertical-align: bottom;
   color: #333333;
-  border: 1px solid rgba(181, 181, 181, 0.53);
+  border: 1px solid rgba(181, 181, 181, .53);
   border-radius: 2px;
   outline: none;
-  background-color: #fff;
+  background-color: #ffffff;
+
   -webkit-appearance: none;;
 }
 
@@ -1050,15 +1069,15 @@ Typeahead Styles
 /************************/
 
 .informations-section p {
-  overflow: hidden;
-     text-overflow: ellipsis;
   margin-bottom: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .informations-personal {
-  padding-bottom: 3px;
   margin-bottom: 15px;
-  border-bottom: solid 1px rgba(136, 136, 136, 0.24);
+  padding-bottom: 3px;
+  border-bottom: solid 1px rgba(136, 136, 136, .24);
 }
 
 .name-form-control {
@@ -1093,8 +1112,8 @@ Typeahead Styles
 .informations-list-header {
   margin: 10px auto 5px;
   font-size: 12px;
-  color: #717171;
   font-weight: bold;
+  color: #717171;
 }
 
 .informations-item a {
