production build for front app, assets & dir cleanup

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,7 +29,7 @@
 
 {% block javascripts %}
 
-{% javascripts 'js/vendor/jquery.min.js' 'js/vendor/bootstrap.js' 'js/todo.js' 'js/vendor/bootstrap.js'%}
+{% javascripts 'js/libs/jquery.min.js' 'js/libs/bootstrap.js' 'js/libs/todo.js' 'js/libs/bootstrap.js'%}
   <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
 
