remove brand link

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -19,9 +19,8 @@
 	      </div>
 	  </form>
 	  <footer class="brand-footer">
-  		Créé par <a class="saio-brandmark" href="http://saio.fr" alt="saio.fr" target="_blank" rel="nofollow">
+  		Créé par
         	<img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
-      </a>
 	  </footer>
   </section>
 </div>
