welcome & onboarding msgs now get their value from the db (per client value)

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -74,7 +74,7 @@
 
       <footer>
         <p>
-          Crée par <a href="http://www.saio.fr" target="_blank">SAIO</a>
+          Crée par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
         </p>
       </footer>
 
