--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -9,7 +9,7 @@
 
 		<div class="lily-box-messages">
 			<div class="lily-msg-chat-wait">
-				<p>Posez vos questions sur SOS-Malus à Labelette notre assistant virtuel</p>
+				<p><%= onBoardingMsg %></p>
 			</div>
 			<!-- Here goes the bubbles-->
 		</div>
@@ -25,7 +25,7 @@
 
 	  <footer class="brand-footer">
   		Créé par
-        <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+      <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
 	  </footer>
   </section>
 </div>
