--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -4,7 +4,7 @@
 			<div id="chat-box-messages" class="chat-messages">
 			<!-- Here goes the bubbles-->
 			  <div class="lily-msg-chat-wait">
-			    <p>Posez votre question. Un conseiller SOS Malus vous répondra le plus rapidement possible. </p>
+			    <p><%= onBoardingMsg %></p>
 			  </div>
 			</div>
 		</section>
@@ -20,7 +20,7 @@
 	  </form>
 	  <footer class="brand-footer">
   		Créé par
-        	<img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+      <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
 	  </footer>
   </section>
 </div>
