--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -867,11 +867,11 @@ HEADER
   line-height: 1;
   overflow: auto;
   overflow-x: hidden;
-  vertical-align: bottom;
   color: #888888;
   border: 1px solid rgba(181, 181, 181, .25);
   border-radius: 3px;
   outline: none;
+  background-color: rgb(240, 240, 240);
   background-color: rgba(232, 232, 232, 0.6);
 
   -webkit-appearance: none;;
@@ -884,8 +884,8 @@ HEADER
   content: attr(data-placeholder);
   position: relative;
   z-index: 2;
-  top: 2px;
-  left: 0px;
+  top: 3px;
+  left: 0;
   margin-top: 3px;
   margin-left: 0;
   -webkit-user-select: none;
@@ -895,7 +895,7 @@ HEADER
   white-space: nowrap;
   text-overflow: ellipsis;
   pointer-events: none;
-  color: #b3b3b3;
+  color: #777777;
 }
 
 .btn-sendmsg {
@@ -992,7 +992,7 @@ Typeahead Styles
 }
 
 .lily-box-messages.tt-overlay {
-  opacity: .3;
+  opacity: .2;
 }
 
 .tt-suggestion,
@@ -1824,8 +1824,8 @@ MENU
 .lily-menu-body li {
   display: block;
   width: 100%;
-  height: 3.5em; /*120px*/
-  line-height: 3.75em; /*centrage vertical*/
+  height: 3.2em; /*48px*/
+  line-height: 3.2em; /*vertical centering*/
 }
 
 .lily-menu-body li:after {
@@ -1849,19 +1849,9 @@ MENU
 
 .lily-menu-body li a span {
   display: inline-block;
-  display: inline-block;
   width: 50px;
-  height: 60px;
-  line-height: 56px;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.lily-menu-body li li a span {
-  display: inline-block;
-  width: 50px;
-  height: 60px;
-  line-height: 56px;
+  height: 3.2em;
+  line-height: 3.2em;
   text-align: center;
   vertical-align: middle;
 }
@@ -1879,7 +1869,7 @@ MENU
   width: 100%;
   height: 40px;
   padding: 0;
-  line-height: 40px;
+  line-height: 38px;
   -webkit-transition: all .3s;
           transition: all .3s;
   color: #ffffff;
@@ -2104,10 +2094,10 @@ CONTACT FORM
   position: absolute;
   z-index: 10;
   right: 0;
-  bottom: 4px;
+  bottom: 5px;
   left: 0;
   margin: 0 auto;
-  font-size: 12px;
+  font-size: 11px;
   text-align: center;
   color: rgba(0, 0, 0, .6);
 }
@@ -2116,10 +2106,10 @@ CONTACT FORM
   text-decoration: none;
 }
 
-.saio-brandmark .saio-logo {
+.saio-logo {
   position: relative;
   top: 2px;
-  height: 12px;
+  height: 11px;
   margin-left: 1px;
   vertical-align: baseline;
   opacity: 1;
