--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -24,8 +24,7 @@
     </form>
 
 	  <footer class="brand-footer">
-  		Créé par <a class="saio-brandmark" href="http://saio.fr" alt="saio.fr" target="_blank" rel="nofollow">
-        <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+  		Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
       </a>
 	  </footer>
   </section>
