fix typo + remove brand link

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -74,7 +74,7 @@
 
       <footer>
         <p>
-          Crée par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+          Crée par <img class="saio-logo" src="http://cdn-saio.fr/images/saioBrand2x.png">
         </p>
       </footer>
 
