analytics tracking (first draft

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -24,7 +24,7 @@
     </form>
 
 	  <footer class="brand-footer">
-  		Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+  		Créé par <img class="saio-logo" src="http://cdn-saio.fr/images/saioBrand2x.png">
 	  </footer>
   </section>
 </div>
