--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -19,7 +19,7 @@
 	      </div>
 	  </form>
 	  <footer class="brand-footer">
-  		Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+			Créé par <img class="saio-logo" src="http://cdn-saio.fr/images/saioBrand2x.png">
 	  </footer>
   </section>
 </div>
