fix role_knowledge_operator access issue & allow to use knowledge base for everyone

--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -123,7 +123,7 @@ filter='cssrewrite' %}
   <!-- custom config -->
   <script>
     window.config.chat = {{ app.user.client.config.chat }};
-    window.config.isChatOperator = {{ is_granted('ROLE_CHAT_OPERATOR') }};
+    window.config.isChatOperator = {{ is_granted('ROLE_CHAT_OPERATOR')|serialize('json') }};
     window.config.userId = '{{ app.user.id }}';
   </script>
 
