--- a/src/Lily/BackOfficeBundle/Resources/views/menu.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/menu.html.twig
@@ -11,15 +11,14 @@
               <span>Dashboard</span>
             </a>
           </li>
-          {% if app.user.client.config.avi %}
-            {% if is_granted('ROLE_KNOWLEDGE_OPERATOR') %}
+
+          {% if is_granted('ROLE_KNOWLEDGE_OPERATOR') %}
           <li>
             <a href="{{ path('lily_knowledge') }}" class="{% if app.request.attributes.get('_route') == 'lily_questions' %}active{% endif %}">
               <i class="icon-book"></i>
               <span>Connaissances</span>
             </a>
           </li>
-            {% endif %}
           {% endif %}
 
           {% if app.user.client.config.chat %}
@@ -42,12 +41,15 @@
           </li>
           {% endif %}
 
+          {% if is_granted('ROLE_ADMIN') %}
           <li>
             <a href="{{ path('lily_statistics') }}" class="{% if app.request.attributes.get('_route') == 'lily_statistics' %}active{% endif %}">
               <i class="icon-bar-chart"></i>
               <span>Statistiques</span>
             </a>
           </li>
+          {% endif %}
+          
           {% if is_granted('ROLE_ADMIN') %}
           <li>
             <a href="{{ path('lily_config') }}" class="{% if app.request.attributes.get('_route') == 'lily_config' %}active{% endif %}">
